# BAD-Gaussians

./: .gitignore  pose_viewer.py  pyproject.toml  requirements.txt  simple_trainer.py  simple_trainer_deblur.py  simple_viewer.py  utils.py
bad_gaussians/: bad_camera_optimizer.py  bad_gaussians.py  bad_strategy.py  bad_viewer.py  deblur_nerf_dataparser.py  spline.py  spline_functor.py
datasets/: colmap.py  colmap_dataparser.py  colmap_utils.py  deblur_nerf.py  traj.py
scripts/benchmarks/: badnerf_synthetic.sh  deblurnerf_real.sh  exblurf_real.sh  exblurf_synthetic.sh
